feat(spinner): Spinner service on loading

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -14,7 +14,8 @@
   background-color: @custom-primary;
   border-radius: 25px;
   box-sizing: border-box;
-  box-shadow: 0px 0px 5px black;
+  box-shadow: 0px 0px 10px rgba(black, 0.3);
+  z-index: 10;
   svg{
     fill: @secondary-color;
     width: 80%;
