--- a/src/app/components/authentication/login/login.component.less
+++ b/src/app/components/authentication/login/login.component.less
@@ -68,6 +68,7 @@ h1, p{
 }
 
 form{
+  position: relative;
   width: 40%;
   height: 500px;
   padding: 100px 30px;
@@ -75,6 +76,19 @@ form{
   flex-direction: column;
   justify-content: space-between;
   box-sizing: border-box;
+}
+
+.spinner{
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: @secondary-color;
+  position: absolute;
 }
 
 .error-field{
@@ -132,6 +146,7 @@ form{
     box-sizing: border-box;
   }
   form{
+    position: relative;
     width: 60%;
     margin-bottom: 40px;
   }
