--- a/src/app/components/authentication/sign-up/sign-up.component.less
+++ b/src/app/components/authentication/sign-up/sign-up.component.less
@@ -4,12 +4,12 @@
   height: 100vh;
   display: flex;
   justify-content: end;
+  align-items: center;
 }
 
 .left{
   z-index: 1;
   width: 30%;
-  margin-top: 60px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -21,11 +21,12 @@ img{
 }
 
 .right{
+  height: 100vh;
   min-height: 600px;
   width: 70%;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   border-radius: 20px 0 0 20px;
   background-color: @secondary-color;
   /* box-sizing: border-box; */
@@ -47,11 +48,13 @@ img{
 
   .row {
     width: 100%;
+
     .button-comtainer{
       width: 100%;
       display: flex;
       justify-content: flex-start;
       align-items: center;
+      margin-top: 20px;
     }
   }
 }
@@ -60,6 +63,7 @@ h1, p{
   margin: 0;
   padding: 0;
   color: @text-color;
+  margin-bottom: 20px;
 }
 
 .sweet-alert-title{
@@ -70,8 +74,7 @@ h1, p{
 form{
   position: relative;
   width: 60%;
-  height: 500px;
-  padding: 100px 30px;
+  padding: 0 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -175,5 +178,13 @@ form{
 {
   form{
     width: 100%;
+  }
+}
+
+// Vertical responsive
+@media (max-height: 610px)
+{
+  .content {
+    align-items: flex-start;
   }
 }
