--- a/src/app/components/authentication/sign-up/sign-up.component.less
+++ b/src/app/components/authentication/sign-up/sign-up.component.less
@@ -45,6 +45,7 @@ img{
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-top: 20px;
 
   .row {
     width: 100%;
@@ -54,7 +55,7 @@ img{
       display: flex;
       justify-content: flex-start;
       align-items: center;
-      margin-top: 20px;
+      margin-bottom: 5px;
     }
   }
 }
@@ -155,7 +156,7 @@ form{
     width: 320px;
     max-width: 80%;
     margin-right: 0;
-    margin-top: -170px;
+    margin-top: -110px;
   }
 
   .centered {
@@ -182,9 +183,14 @@ form{
 }
 
 // Vertical responsive
-@media (max-height: 610px)
+@media (max-height: 600px)
 {
   .content {
     align-items: flex-start;
+
+    .left {
+      margin-top: 40px;
+    }
+
   }
 }
