--- a/src/app/components/controls/button/button.component.less
+++ b/src/app/components/controls/button/button.component.less
@@ -17,7 +17,9 @@ button{
 
   &:focus{
     outline: none;
-    opacity: 0.8;
+    background-color: @secondary-color;
+    color: @custom-primary;
+    transform: scale(1.05);
   }
 
   &:hover{
