--- a/src/app/components/controls/input/input.component.html
+++ b/src/app/components/controls/input/input.component.html
@@ -3,6 +3,7 @@
   [name]="name"
   [type]="type"
   [placeholder]="placeholder"
+  [attr.aria-label]="ariaLabelContent"
   [tabindex]="tabIndexNumber"
   (input)="change($event)"
   [ngClass]="{'error-field':error && submitted}"
