fix(authentication): aria label on redirect option

--- a/src/app/components/authentication/login/login.component.html
+++ b/src/app/components/authentication/login/login.component.html
@@ -54,7 +54,7 @@
             >
             </app-button>
           </div>
-          <p class="redirect">{{'AUTH.REDIRECT_LOGIN' | translate }}<a routerLink="/signup" href="#">{{ 'AUTH.HERE' | translate }}</a></p>
+          <p class="redirect">{{'AUTH.REDIRECT_LOGIN' | translate }}<a attr.aria-label="{{'AUTH.REDIRECT_LOGIN' | translate }} {{ 'AUTH.HERE' | translate }}" routerLink="/signup" href="#">{{ 'AUTH.HERE' | translate }}</a></p>
         </div>
       </div>
     </form>
