--- a/src/app/components/authentication/sign-up/sign-up.component.html
+++ b/src/app/components/authentication/sign-up/sign-up.component.html
@@ -118,7 +118,7 @@
             >
             </app-button>
           </div>
-          <p class="redirect">{{'AUTH.REDIRECT_SIGNUP' | translate }}<a routerLink="/login" href="#">{{ 'AUTH.HERE' | translate }}</a></p>
+          <p class="redirect">{{'AUTH.REDIRECT_SIGNUP' | translate }}<a attr.aria-label="{{'AUTH.REDIRECT_SIGNUP' | translate }} {{ 'AUTH.HERE' | translate }}" routerLink="/login" href="#">{{ 'AUTH.HERE' | translate }}</a></p>
         </div>
       </div>
     </form>
