--- a/src/app/components/controls/navbar/navbar.component.less
+++ b/src/app/components/controls/navbar/navbar.component.less
@@ -1,27 +1,12 @@
-@import "../../../../common-variables.less";
-
 nav{
   position: fixed;
   width: 100%;
-  height: 50px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  box-sizing: border-box;
   /* border: 1px solid red; */
-  a, p, select{
+  p, select{
     margin-right: 30px;
   }
-
-  .skip{
-    font-family: @text-font;
-    text-decoration: none;
-    color: @text-color;
-    margin-top: -100px;
-    &:focus{
-      margin-top: 5px;
-      outline: none;
-      border-bottom: 2px solid @custom-primary;
-    }
-  }
+  
 }
