--- a/src/app/components/controls/navbar/navbar.component.less
+++ b/src/app/components/controls/navbar/navbar.component.less
@@ -1,12 +1,28 @@
+@import "../../../../common-variables.less";
+
 nav{
   position: fixed;
   width: 100%;
+  height: 50px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  /* border: 1px solid red; */
-  p, select{
+
+  .skip-content{
+    margin-top: -100px;
+    text-decoration: none;
+    color: @text-color;
+    outline: none;
+    border-bottom: 2px solid @custom-primary;
+    &:focus{
+      margin-top: 0;
+    }
+  }
+
+  a, p, select{
     margin-right: 30px;
   }
-  
+
+
+
 }
