--- a/src/app/components/controls/input/input.component.html
+++ b/src/app/components/controls/input/input.component.html
@@ -2,7 +2,7 @@
   [value]="value"
   [name]="name"
   [type]="type"
-  [placeholder]="placeholder"
+  [placeholder]="placeHolderText"
   [attr.aria-label]="ariaLabelContent"
   [tabindex]="tabIndexNumber"
   (input)="change($event)"
