fix(navbar): skip to content on navbar

--- a/src/app/components/controls/input/input.component.html
+++ b/src/app/components/controls/input/input.component.html
@@ -4,6 +4,7 @@
   [type]="type"
   [placeholder]="placeHolderText"
   [attr.aria-label]="ariaLabelContent"
+  [attr.aria-labelledby]="ariaLabelledBy"
   [tabindex]="tabIndexNumber"
   (input)="change($event)"
   [ngClass]="{'error-field':error && submitted}"
